# wsb_pz_sem_6_project

pz_backend/: README.md  manage.py  pyproject.toml
pz_backend/exchange_rates/: models.py  nbp_api.py  tests.py  urls.py  views.py
pz_backend/exchange_rates/migrations/: 0001_initial.py  0002_exchangerate_name.py  0003_rename_date_exchangerate_exchange_date_and_more.py
pz_backend/exchange_rates/tests/: test_nbp_api.py  test_views.py
pz_backend/pz_backend/: asgi.py  settings.py  urls.py  wsgi.py
pz_backend/users/: models.py  serializers.py  tests.py  urls.py  views.py
pz_backend/users/migrations/: 0001_initial.py  0002_alter_user_managers.py
pz_frontend/: README.md  angular.json  package-lock.json  package.json
pz_frontend/src/: index.html
pz_frontend/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.routes.ts  auth.service.ts
pz_frontend/src/app/dashboard/: dashboard.component.ts
pz_frontend/src/app/login/: login.component.html  login.component.spec.ts  login.component.ts
pz_frontend/src/app/menu/: menu.component.html  menu.component.ts
